Updates from Overleaf

--- a/additionalPages/abstract.tex
+++ b/additionalPages/abstract.tex
@@ -6,12 +6,12 @@
 \end{center}
 \addcontentsline{toc}{section}{ABSTRACT}
  % \setmainfont{Times New Roman}
-The integration of solar photovoltaic (PV) systems with doubly-fed induction generator (DFIG) wind turbines presents significant control challenges due to tightly coupled nonlinear dynamics, intermittent renewable resources, and stringent grid code requirements. This thesis addresses these challenges through advanced deep reinforcement learning control strategies, specifically investigating Twin-Delayed Deep Deterministic Policy Gradient (TD3) and Deep Deterministic Policy Gradient (DDPG) algorithms for unified power optimization in hybrid DFIG-Solar PV energy systems.
+The integration of solar photovoltaic (PV) systems with doubly-fed induction generator (DFIG) wind turbines presents significant control challenges due to tightly coupled nonlinear dynamics, intermittent renewable resources, and stringent grid code requirements. This thesis addresses these challenges through advanced deep reinforcement learning control strategies, specifically investigating Twin-Delayed Deep Deterministic Policy Gradient (TD3) and Deep Deterministic Policy Gradient (DDPG) algorithms for unified power controller in hybrid DFIG-Solar PV energy systems.
 
 A unified control framework is developed for rotor-side and grid-side converter control using reinforcement learning method with multi-objective reward function. The reinforcement learning based algorithm has key aspects like clipped double Q-learning to mitigate value overestimation bias, delayed policy updates for enhanced training stability, and target policy smoothing for improved robustness. This address fundamental limitations of conventional DDPG based approach.
 
  The Hardware-in-Loop (HIL) validation on the OPAL-RT OP4510 real-time simulator shows improved performance compared to classical PI control and DDPG based implementations. The experimental results reveal that TD3 achieves faster response time , reduced power overshoot, improved DC link voltage regulation , and faster settling time  compared to conventional PI controllers. Comparative analysis reveals that while DDPG provides better metrics through aggressive optimization, TD3 delivers more balanced multi-objective performance across diverse operating conditions.
 
-The key trade-offs between training complexity and deployment performance, demonstrates that TD3's has increased training overhead translates to lower deployment cost with better operational reliability. The model-free nature of deep reinforcement learning enables adaptive control without requiring accurate system models.
+The key trade-offs between training complexity and deployment performance demonstrates that TD3's has increased training overhead with better operational reliability and performance. The model-free nature of deep reinforcement learning enables adaptive control without requiring accurate system models.
 
-This research makes following contributions: first application of TD3 to integrated DFIG-PV hybrid systems, DDPG-TD3 comparative analysis under identical conditions, unified controller design managing coupled RSC-GSC-PV dynamics, and HIL validation demonstrating industrial feasibility. The work investigates the state-of-the-art in intelligent renewable energy control while providing learning for deploying deep reinforcement learning in grid-connected power systems.
+This research makes the following contributions: application of TD3 to integrated DFIG-PV hybrid systems, comparative analysis of DDPG-TD3 under identical conditions, unified controller design managing coupled RSC-GSC-PV dynamics, and HIL validation. This work investigates application of deep reinforcement learning based controller for intelligent renewable energy control in DFIG-Solar PV hybrid generation system.
