--- a/additionalPages/titlesynopsisPage.tex
+++ b/additionalPages/titlesynopsisPage.tex
@@ -3,7 +3,7 @@
 % \vspace*{2cm}
 {\fontsize {16pt}{18pt} \textbf{Deep Reinforcement Learning Based Control Strategy for Solar PV-Integrated Doubly-Fed Induction Generator Systems}}\\[5cm]
 
-{\fontsize {12pt}{14pt}{\textbf{\textit{PhD. Thesis submitted to}}}}\\[0.3cm]
+{\fontsize {12pt}{14pt}{\textbf{\textit{PhD. Synopsis submitted to}}}}\\[0.3cm]
 
 {\fontsize {12pt}{14pt}{\textbf{\textit{National Institute of Technology, Uttarakhand}}}}\\[0.3cm]
 {\fontsize {12pt}{14pt}{\textbf{\textit{for the award of the degree}}}}\\[1cm]
