--- a/main.tex
+++ b/main.tex
@@ -153,7 +153,7 @@
 
 \fancypagestyle{chapterA3}{
   \fancyhf{}
-  \fancyhead[R]{\textcolor{wordfade}{\fontsize{12pt}\textbf{\textit{Chapter A.3:Modelling and Simulation }}}}
+  \fancyhead[R]{\textcolor{wordfade}{\fontsize{12pt}\textbf{\textit{Chapter A.3:System Architecture and Modelling}}}}
   \fancyfoot[C]{\textcolor{wordfade}\thepage} 
   \renewcommand{\headrulewidth}{0.4pt} 
 }
@@ -288,7 +288,7 @@
 \label{chap:introduction}
 \thispagestyle{chapterA2}
 \pagestyle{chapterA1}
-\input{chapters/chapter1/introduction}
+\input{chapters/chapter1/intro}
 
 \newpage
 \customchapter{2}{\MakeUppercase{LITERATURE REVIEW}}
@@ -305,7 +305,7 @@
 % \input{chapters/chapter3/system_configuration}
 
 \newpage
-\customchapter{3}{\MakeUppercase{Modelling and Simulation}}
+\customchapter{3}{\MakeUppercase{System Architecture and Modelling}}
 \label{chap:rl}
 \thispagestyle{chapterA3}
 \pagestyle{chapterA3}
