Updates from Overleaf

--- a/additionalPages/dedication.tex
+++ b/additionalPages/dedication.tex
@@ -1,91 +1,73 @@
-% \setmainfont{Bookman Old Style}
 \begin{center}
-% {\fontsize{18pt}{20pt}\selectfont \textbf{\underline{DEDICATION}}}
-{\fontsize{18 pt}{20 pt}\bookmanheading{\underline{DEDICATION}}}
-% {\fontsize{18pt}{20pt}\normalfont\fontfamily{pbk}\selectfont\Large\bfseries\textbf{\underline{DEDICATION}}}
-\end{center}
-\vspace{2 cm}
-\begin{center}
-    {\Large 
-    \begin{hindi}
-    \hindifont
-    \textbf{\textcolor{saffron}{
-    यह शोध कार्य समर्पित है\\
-    श्री हनुमान जी के चरणों में\\
-    जो  शक्ति, बुद्धि और भक्ति के प्रतीक हैं
-    }}
-    \end{hindi}
-    }\\
-    \vspace{0.2cm}
-    {\large \textit{This research work is humbly dedicated to}}
-    
-    % \vspace{0.2cm}
-    
-    {\Large \textbf{\textcolor{saffron}{Lord Hanuman}}}
-    
-    % \vspace{0.2cm}
-    
-    {\large \textit{The epitome of devotion, strength, and wisdom}}
-    
-    \vspace{1 cm}    
-   
-    {\Large\selectfont 
-    \textbf{\textcolor{saffron}{
-    \begin{hindi}
-    \hindifont
-    बुद्धिहीन तनु जानिके, सुमिरौं पवन-कुमार।\\
-    बल बुद्धि विद्या देहु मोहिं, हरहु कलेस विकार॥
-    \end{hindi}
-    }}}
-    
-    \vspace{0.2 cm}
-     {\large \textit{
-    "Knowing myself to be ignorant, I remember you, O son of the wind.\\
-    Grant me strength, wisdom, and knowledge, and remove all my sufferings and flaws."
-    }}
-    \vspace{1 cm}
-    
-    
-     {\Large\selectfont 
-    \textbf{\textcolor{saffron}{
-    \begin{hindi}
-    \hindifont
-    जय हनुमान ज्ञान गुन सागर।\\
-    जय कपीस तिहुं लोक उजागर॥
-    \end{hindi}
-    }}   } 
-    \vspace{0.3 cm}    
-   
-    {\large 
-    \textit{May His divine blessings guide this research endeavor\\
-    and illuminate the path of knowledge and righteousness.}
-    }
-    
-    \vspace{1.5 cm}
-    
-     {\Large \textbf{\textcolor{saffron}{
-    \begin{hindi}
-    \hindifont
-    जय हनुमान
-    \end{hindi}
-    }}}
-        \vspace{0.2 cm}
+{\fontsize{18pt}{20pt}\bookmanheading{\underline{DEDICATION}}}
+\thispagestyle{empty}
 
-    
-    {\large \textit{Victory to} }{\Large \textbf{\textcolor{saffron}{
-        Lord Hanuman
-        }}}
-    
-    \vspace{1 cm}
-    
-       {\Large 
-    \begin{hindi}
-    \hindifont
-    \textbf{\textcolor{saffron}{
-    आपके आशीर्वाद से यह कार्य सफल हो सका 
-    }}
-    \end{hindi}
-    }
-    
-    {\large \textit{This work succeed with your blessings}}
+% ============================================================
+%  EPIGRAPH 1 — Composed Shloka (Original, anuṣṭubh meter)
+% ============================================================
+
+\begin{center}
+{\hindifont\large
+सूर्यरश्मिभिराकृष्टं जलं मेघे विलीयते।\\[4pt]
+वायुना नीयते दूरं वर्षित्वा सागरं व्रजेत्॥
+}
+\end{center}
+
+\vspace{0.6cm}
+
+\begin{center}
+\textit{Water, drawn up by the sun's rays, dissolves into cloud.}\\[3pt]
+\textit{Carried far by the wind, it rains — and returns to the ocean.}
+\end{center}
+
+\vspace{0.4cm}
+\begin{center}
+\textbf{\textit{(Navaracanā — original composition in anuṣṭubh metre)}}
+\end{center}
+
+% ============================================================
+\begin{center}
+\rule{0.35\textwidth}{0.4pt}
+\end{center}
+
+% ============================================================
+%  EPIGRAPH 2 — Chāndogya Upaniṣad 6.10.1
+% ============================================================
+
+\begin{center}
+{\hindifont\large
+स यथा नद्यः स्यन्दमानाः समुद्रायणाः\\[4pt]
+समुद्रं प्राप्यास्तं गच्छन्ति,\\[4pt]
+भिद्येते तासां नामरूपे,\\[4pt]
+समुद्र इत्येवं प्रोच्यते॥
+}
+\end{center}
+
+\vspace{0.6cm}
+
+\begin{center}
+\textit{Just as rivers, flowing onward, reach the ocean and merge into it}\\[3pt]
+\textit{— losing their name and form —}\\[3pt]
+\textit{so too are they called simply: the ocean.}
+\end{center}
+
+\vspace{0.4cm}
+\begin{center}
+\textbf{\textit{Chāndogya Upaniṣad 6.10.1}}
+\end{center}
+
+% ============================================================
+%  DEDICATION
+% ============================================================
+
+\vspace{2cm}
+\end{center}
+
+\noindent\textbf{Dedicated to,}
+
+\vspace{1.5cm}
+
+\begin{center}
+\textit{My parents, wife, lovely kids, teachers and colleagues,}\\[4pt]
+\textit{who encouraged and supported me over time.}
 \end{center}
