--- a/additionalPages/resume.tex
+++ b/additionalPages/resume.tex
@@ -1,6 +1,60 @@
 \begin{center}
-% {\fontsize{18pt}{20pt}\selectfont \textbf{\underline{RESUME}}}
 {\fontsize{18pt}{20pt}\bookmanheading{\underline{RESUME}}}
 \end{center}
 \addcontentsline{toc}{section}{RESUME}
-% \lipsum[5-6] % Placeholder text
+
+\section*{Personal Information}
+\noindent
+\begin{tabular}{@{}ll}
+  \textbf{Name:}     & Ruchir Pandey \\[2pt]
+  \textbf{Email:}    & ruchir.pandey@gmail.com \\[2pt]
+  \textbf{Phone:}    & +91 9873070033 \\[2pt]
+  \textbf{LinkedIn:} & www.linkedin.com/in/rpandey2 \\
+\end{tabular}
+
+\vspace{0.5cm}
+\noindent\rule{\textwidth}{1.5pt}\\[-1.3em]
+\noindent\rule{\textwidth}{0.4pt}
+
+
+% ============================================================
+\section*{Education}
+
+\noindent\textbf{Ph.D. in Electrical Engineering} \hfill \textit{2019--Present}\\
+\noindent National Institute of Technology, Uttarakhand\\
+\noindent\textit{Thesis: Reinforcement Learning based controller for Doubly-Fed Induction Generator in Solar PV-integrated Wind Energy Systems}
+
+\vspace{0.4cm}
+\noindent\textbf{M.Tech. in Alternate Hydro Energy Systems} \hfill \textit{1999--2001}\\
+\noindent Indian Institute of Technology, Roorkee
+
+\vspace{0.4cm}
+\noindent\textbf{B.Tech. in Electrical Engineering} \hfill \textit{1995--1999}\\
+\noindent G.B. Pant University of Agriculture \& Technology, Pantnagar, Uttarakhand
+
+\vspace{0.3cm}
+\noindent\rule{\textwidth}{1.5pt}\\[-1.3em]
+\noindent\rule{\textwidth}{0.4pt}
+
+
+% ============================================================
+\section*{Professional Experience}
+
+\noindent\textbf{General Manager -- Information Technology} \hfill \textit{2025--Present}\\
+\noindent Swami Rama Himalayan University, Dehradun
+
+\vspace{0.4cm}
+\noindent\textbf{Technical Program Manager} \hfill \textit{Jan 2022--Oct 2025}\\
+\noindent Software Business Systems Consulting (SBSC)
+
+\vspace{0.4cm}
+\noindent\textbf{Program Manager \& Faculty} \hfill \textit{Oct 2015--Jan 2022}\\
+\noindent Swami Rama Himalayan University, Dehradun
+
+\vspace{0.4cm}
+\noindent\textbf{Technical Project Manager} \hfill \textit{2006--2015}\\
+\noindent Sopra Steria / SBSC
+
+\vspace{0.4cm}
+\noindent\textbf{IT Analyst / Project Lead} \hfill \textit{2001--2006}\\
+\noindent Tata Consultancy Services \& American Express
