--- a/additionalPages/titlePage.tex
+++ b/additionalPages/titlePage.tex
@@ -1,9 +1,9 @@
 \begin{titlepage}
 \begin{center}
 % \vspace*{2cm}
-{\fontsize {16pt}{18pt} \textbf{Deep Reinforcement Learning Based Control Strategy for Solar PV-Integrated Doubly-Fed Induction Generator Systems}}\\[5cm]
+{\fontsize {16pt}{18pt} \textbf{Deep Reinforcement Learning Based Control Strategy for Solar\\[6pt] PV-Integrated Doubly-Fed Induction Generator Systems}}\\[4.5cm]
 
-{\fontsize {12pt}{14pt}{\textbf{\textit{PhD. Thesis submitted to}}}}\\[0.3cm]
+{\fontsize {12pt}{14pt}{\textbf{\textit{ Thesis submitted to}}}}\\[0.3cm]
 
 {\fontsize {12pt}{14pt}{\textbf{\textit{National Institute of Technology, Uttarakhand}}}}\\[0.3cm]
 {\fontsize {12pt}{14pt}{\textbf{\textit{for the award of the degree}}}}\\[1cm]
